@@ -3,7 +3,6 @@ package editor;
 import javax.swing.*;
 import java.awt.*;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Iterator;
 import java.util.List;
 
@@ -15,10 +14,12 @@ public class TextEditorModel extends JComponent implements LinesIterable{
     private Location cursorLocation;
     private LocationRange selectionRange;
     private List<CursorObserver> cursorObservers;
+    private List<TextObserver> textObservers;
 
     public TextEditorModel(String text){
-        lines = Arrays.asList(text.split("\n").clone());
+        lines = new ArrayList<>(List.of(text.split("\n").clone()));
         cursorObservers = new ArrayList<>();
+        textObservers = new ArrayList<>();
         cursorLocation = new Location(0,0);
     }
 
@@ -26,9 +27,9 @@ public class TextEditorModel extends JComponent implements LinesIterable{
     @Override
     protected void paintComponent(Graphics g){
 
+        // paint text
         g.setFont(font);
         int h = g.getFontMetrics().getHeight();
-        System.out.println(h);
         int w = g.getFontMetrics().charWidth('i');
         Iterator<String> linesIt = lines.iterator();
         while(linesIt.hasNext()){
@@ -43,7 +44,6 @@ public class TextEditorModel extends JComponent implements LinesIterable{
         g.drawLine(cursorLocation.x*w, cursorLocation.y*h + diff, cursorLocation.x*w, (cursorLocation.y+1)*h + diff);
 
     }
-
 
 
     @Override
@@ -65,16 +65,30 @@ public class TextEditorModel extends JComponent implements LinesIterable{
         cursorObservers.remove(o);
     }
 
-    private void notifyObservers(){
+    public void addTextObserver(TextObserver o){
+        textObservers.add(o);
+    }
+
+    public void removeTextObserver(TextObserver o){
+        textObservers.remove(o);
+    }
+
+    private void notifyCursorObservers(){
         for(var observer : cursorObservers){
             observer.updateCursorLocation(this.cursorLocation);
+        }
+    }
+
+    private void notifyTextObservers(){
+        for(var observer : textObservers){
+            observer.updateText();
         }
     }
 
     public void moveCursorLeft(){
         if(cursorLocation.x > 0) {
             cursorLocation.x--;
-            notifyObservers();
+            notifyCursorObservers();
         }
     }
 
@@ -82,7 +96,7 @@ public class TextEditorModel extends JComponent implements LinesIterable{
         int n = lines.get(cursorLocation.y).length();
         if( cursorLocation.x < n) {
             cursorLocation.x++;
-            notifyObservers();
+            notifyCursorObservers();
         }
     }
 
@@ -94,7 +108,7 @@ public class TextEditorModel extends JComponent implements LinesIterable{
             if (n < cursorLocation.x)
                 cursorLocation.x = n;
 
-            notifyObservers();
+            notifyCursorObservers();
         }
     }
 
@@ -108,10 +122,86 @@ public class TextEditorModel extends JComponent implements LinesIterable{
             if(n < cursorLocation.x)
                 cursorLocation.x = n;
 
-            notifyObservers();
+            notifyCursorObservers();
         }
     }
 
+    public void deleteBefore(){
+        if(cursorLocation.x != 0){
+            StringBuilder sb = new StringBuilder(lines.get(cursorLocation.y));
+            String newLine = sb.deleteCharAt(cursorLocation.x-1).toString();
+            lines.set(cursorLocation.y, newLine);
+
+            cursorLocation.x--;
+        }
+        else {
+            // beginning of first line
+            if(cursorLocation.y == 0)
+                return;
+
+            //beginning of any other line
+            int currLen = lines.get(cursorLocation.y-1).length();
+            String combinedLines = lines.get(cursorLocation.y-1) + lines.get(cursorLocation.y);
+            lines.set(cursorLocation.y-1, combinedLines);
+            System.out.println(cursorLocation.y);
+            lines.remove(cursorLocation.y);
+
+            cursorLocation.y--;
+            cursorLocation.x = currLen;
+
+        }
+
+        notifyTextObservers();
+        notifyCursorObservers();
+    }
+
+    public void deleteAfter(){
+        if(cursorLocation.x != lines.get(cursorLocation.y).length()){
+
+            StringBuilder sb = new StringBuilder(lines.get(cursorLocation.y));
+            String newLine = sb.deleteCharAt(cursorLocation.x).toString();
+            lines.set(cursorLocation.y, newLine);
+
+        }
+        else{ // cursor is at the end of line
+            if(cursorLocation.y == lines.size()-1) // at the end of the last line
+                return;
+
+            //at the end of any other line
+            String combinedLines = lines.get(cursorLocation.y) + lines.get(cursorLocation.y + 1);
+            lines.set(cursorLocation.y, combinedLines);
+            lines.remove(cursorLocation.y+1);
+
+        }
+        notifyTextObservers();
+    }
+    public void deleteRange(LocationRange r){
+
+    }
+
+    public LocationRange getSelectionRange(){
+        return selectionRange;
+    }
+
+    public void setSelectionRange(LocationRange range){
+        this.selectionRange = range;
+    }
+
+    public void insert(char c){
+
+        StringBuilder sb = new StringBuilder(lines.get(cursorLocation.y));
+        String newLine = sb.insert(cursorLocation.x, c).toString();
+        lines.set(cursorLocation.y, newLine);
+
+        cursorLocation.x++;
+
+        notifyTextObservers();
+        notifyCursorObservers();
+    }
+
+    public void insert(String text){
+
+    }
 
 
     public static class Location{
